--- a/app/src/main/res/drawable/ic_facebook.xml
+++ b/app/src/main/res/drawable/ic_facebook.xml
@@ -1,6 +1,6 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="60dp"
-    android:height="60dp"
+    android:width="@dimen/icon_size"
+    android:height="@dimen/icon_size"
     android:viewportWidth="60"
     android:viewportHeight="60">
   <path
