--- a/app/src/main/res/layout-land/fragment_sign_up.xml
+++ b/app/src/main/res/layout-land/fragment_sign_up.xml
@@ -12,48 +12,48 @@
         android:background="@color/steel_gray">
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/horizontalGuideline_activitySignUp_010"
+            android:id="@+id/guidelineHorizontalSignUp010"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.1" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/horizontalGuideline_activitySignUp_020"
+            android:id="@+id/guidelineHorizontalSignUp020"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.2" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/horizontalGuideline_activitySignUp_060"
+            android:id="@+id/guidelineHorizontalSignUp060"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.6" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/horizontalGuideline_activitySignUp_090"
+            android:id="@+id/guidelineHorizontalSignUp090"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.9" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textViewLetsGetAcquainted"
+            android:id="@+id/textViewSignUpGetAcquainted"
             style="@style/widthHeightIsWrapContent"
 
             android:text="@string/let_s_get_a"
             android:textAlignment="center"
             android:textAppearance="@style/textViewLetsGetAcquaintedTextAppearance"
 
-            app:layout_constraintBottom_toTopOf="@+id/textViewFillOutProfile"
+            app:layout_constraintBottom_toTopOf="@+id/textViewSignUpFillOutProfile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/horizontalGuideline_activitySignUp_010" />
+            app:layout_constraintTop_toTopOf="@id/guidelineHorizontalSignUp010" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textViewFillOutProfile"
+            android:id="@+id/textViewSignUpFillOutProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimension_8dp"
@@ -62,13 +62,13 @@
             android:textAlignment="center"
             android:textAppearance="@style/textViewLFillOutTextAppearance"
 
-            app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline_activitySignUp_020"
+            app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalSignUp020"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewLetsGetAcquainted" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewSignUpGetAcquainted" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayoutEmail"
+            android:id="@+id/textInputLayoutSignUpEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimension_16dp"
@@ -81,13 +81,13 @@
             app:expandedHintEnabled="false"
             app:hintTextColor="@color/silver"
 
-            app:layout_constraintBottom_toTopOf="@id/textInputLayoutPassword"
+            app:layout_constraintBottom_toTopOf="@id/textInputLayoutSignUpPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/horizontalGuideline_activitySignUp_020">
+            app:layout_constraintTop_toTopOf="@id/guidelineHorizontalSignUp020">
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/textInputEmail"
+                android:id="@+id/editTextSignUpEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
@@ -98,7 +98,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textInputLayoutPassword"
+            android:id="@+id/textInputLayoutSignUpPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimension_16dp"
@@ -110,13 +110,13 @@
             app:expandedHintEnabled="false"
             app:hintTextColor="@color/silver"
 
-            app:layout_constraintBottom_toTopOf="@id/checkBoxRememberMe"
+            app:layout_constraintBottom_toTopOf="@id/checkBoxSignUpRememberMe"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail">
+            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignUpEmail">
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/textInputPassword"
+                android:id="@+id/editTextSignUpPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
 
@@ -127,11 +127,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <androidx.appcompat.widget.AppCompatCheckBox
-            android:id="@+id/checkBoxRememberMe"
+            android:id="@+id/checkBoxSignUpRememberMe"
             style="@style/widthHeightIsWrapContent"
             android:layout_marginTop="@dimen/dimension_18dp"
 
-            android:backgroundTint="@color/orange"
             android:button="@drawable/cb"
             android:buttonTint="@color/alabaster"
             android:checked="true"
@@ -140,58 +139,56 @@
             android:textAppearance="@style/checkBoxRememberMeTextAppearance"
             android:textColor="@color/bombay"
 
-            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline_activitySignUp_060"
-            app:layout_constraintStart_toStartOf="@id/textInputLayoutPassword"
-            app:layout_constraintTop_toBottomOf="@id/textInputLayoutPassword"
+            app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalSignUp060"
+            app:layout_constraintStart_toStartOf="@id/textInputLayoutSignUpPassword"
+            app:layout_constraintTop_toBottomOf="@id/textInputLayoutSignUpPassword"
             tools:ignore="RtlSymmetry" />
 
-        <sdumchykov.task3.ui.GoogleButton
-            android:id="@+id/buttonSignInWithGoogle"
+        <sdumchykov.androidApp.presentation.custom.GoogleButton
+            android:id="@+id/buttonSignUpSignInWithGoogle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/dimension_16dp"
 
-            app:layout_constraintBottom_toTopOf="@id/textViewOr"
+            app:layout_constraintBottom_toTopOf="@id/textViewSignUpOr"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/horizontalGuideline_activitySignUp_060" />
+            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalSignUp060" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textViewOr"
+            android:id="@+id/textViewSignUpOr"
             style="@style/widthHeightIsWrapContent"
-            android:layout_marginTop="@dimen/dimension_8dp"
 
             android:text="@string/or"
             android:textAlignment="center"
             android:textAppearance="@style/textViewOrTextAppearance"
 
-            app:layout_constraintBottom_toTopOf="@id/buttonRegister"
+            app:layout_constraintBottom_toTopOf="@id/buttonSignUpRegister"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonSignInWithGoogle" />
+            app:layout_constraintTop_toBottomOf="@id/buttonSignUpSignInWithGoogle" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/buttonRegister"
+            android:id="@+id/buttonSignUpRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimension_16dp"
-            android:layout_marginTop="@dimen/dimension_8dp"
             android:layout_marginEnd="@dimen/dimension_16dp"
 
             android:background="@drawable/selector_button_register"
             android:text="@string/register"
             android:textColor="@color/alabaster"
 
-            android:textSize="16sp"
+            android:textSize="@dimen/text_16sp"
             app:backgroundTint="@null"
 
-            app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline_activitySignUp_090"
+            app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalSignUp090"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewOr" />
+            app:layout_constraintTop_toBottomOf="@id/textViewSignUpOr" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textViewTermAndCondition"
+            android:id="@+id/textViewSignUpTermAndCondition"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimension_16dp"
@@ -203,13 +200,13 @@
             android:textAlignment="center"
             android:textAppearance="@style/textViewTermAndConditionTextAppearance"
 
-            app:layout_constraintBottom_toTopOf="@id/textViewAlreadyHaveAccount"
+            app:layout_constraintBottom_toTopOf="@id/textViewSignUpAlreadyHaveAccount"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/horizontalGuideline_activitySignUp_090" />
+            app:layout_constraintTop_toTopOf="@id/guidelineHorizontalSignUp090" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textViewAlreadyHaveAccount"
+            android:id="@+id/textViewSignUpAlreadyHaveAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dimension_8dp"
@@ -220,16 +217,16 @@
             android:text="@string/already_have"
             android:textAlignment="center"
             android:textColor="@color/bombay"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_14sp"
 
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/textViewSignIn"
+            app:layout_constraintEnd_toStartOf="@id/textViewSignUpSignIn"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textViewTermAndCondition" />
+            app:layout_constraintTop_toBottomOf="@id/textViewSignUpTermAndCondition" />
 
         <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/textViewSignIn"
+            android:id="@+id/textViewSignUpSignIn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/dimension_12dp"
@@ -240,8 +237,8 @@
             android:textColor="@color/white"
 
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/textViewAlreadyHaveAccount"
-            app:layout_constraintTop_toTopOf="@id/textViewAlreadyHaveAccount" />
+            app:layout_constraintStart_toEndOf="@id/textViewSignUpAlreadyHaveAccount"
+            app:layout_constraintTop_toTopOf="@id/textViewSignUpAlreadyHaveAccount" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
