--- a/app/src/main/res/layout/add_contacts_dialog.xml
+++ b/app/src/main/res/layout/add_contacts_dialog.xml
@@ -6,7 +6,7 @@
     android:background="@color/steel_gray">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textinputlayout_addcontactsdialog_name"
+        android:id="@+id/textInputLayoutAddContactsDialogName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimension_16dp"
@@ -18,16 +18,16 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/textinputedittext_addcontactsdialog_name"
+            android:id="@+id/editTextAddContactsDialogName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:textColor="@color/alabaster"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:textColor="@color/alabaster" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textinputlayout_addcontactsdialog_surname"
+        android:id="@+id/textInputLayoutAddContactsDialogSurname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimension_16dp"
@@ -36,19 +36,19 @@
         android:textColorHint="@color/silver"
         app:hintTextColor="@color/silver"
 
-        app:layout_constraintTop_toBottomOf="@id/textinputlayout_addcontactsdialog_name">
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogName">
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/textinputedittext_addcontactsdialog_surname"
+            android:id="@+id/editTextAddContactsDialogSurname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:textColor="@color/alabaster"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:textColor="@color/alabaster" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textinputlayout_addcontactsdialog_profession"
+        android:id="@+id/textInputLayoutAddContactsDialogProfession"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/dimension_16dp"
@@ -57,26 +57,43 @@
         android:textColorHint="@color/silver"
         app:hintTextColor="@color/silver"
 
-        app:layout_constraintTop_toBottomOf="@id/textinputlayout_addcontactsdialog_surname">
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogSurname">
 
         <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/textinputedittext_addcontactsdialog_profession"
+            android:id="@+id/editTextAddContactsDialogProfession"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:textColor="@color/alabaster"
-            android:inputType="text" />
+            android:inputType="text"
+            android:textColor="@color/alabaster" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_addcontactsdialog_add"
-        android:layout_width="wrap_content"
+        android:id="@+id/buttonAddContactsDialogAdd"
+        android:layout_width="156dp"
         android:layout_height="wrap_content"
 
         android:backgroundTint="@color/orange"
+        android:fontFamily="@font/opensans_semi_bold"
         android:text="@string/add_contact"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_16sp"
 
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/buttonAddContactsDialogCancel"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogProfession" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonAddContactsDialogCancel"
+        android:layout_width="156dp"
+        android:layout_height="wrap_content"
+
+        android:backgroundTint="@color/alabaster"
+        android:fontFamily="@font/opensans_semi_bold"
+        android:text="Cancel"
+        android:textSize="@dimen/text_16sp"
+
+        app:layout_constraintEnd_toStartOf="@id/buttonAddContactsDialogAdd"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textinputlayout_addcontactsdialog_profession" />
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogProfession" />
 </androidx.constraintlayout.widget.ConstraintLayout>
