--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/signUpFragment">
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="sdumchykov.task3.SignUpFragment"
+        android:name="sdumchykov.androidApp.presentation.signUp.SignUpFragment"
         android:label="SignUpFragment"
         tools:layout="@layout/fragment_sign_up">
         <action
@@ -15,16 +15,23 @@
     </fragment>
     <fragment
         android:id="@+id/myProfileFragment"
-        android:name="sdumchykov.task3.MyProfileFragment"
+        android:name="sdumchykov.androidApp.presentation.myProfile.MyProfileFragment"
         android:label="MyProfileFragment"
         tools:layout="@layout/fragment_my_profile">
         <action
             android:id="@+id/action_myProfileFragment_to_myContactsFragment"
-            app:destination="@id/myContactsFragment" />
+            app:destination="@id/myContactsFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
+        <argument
+            android:name="email"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/myContactsFragment"
-        android:name="sdumchykov.task3.MyContactsFragment"
+        android:name="sdumchykov.androidApp.presentation.contacts.MyContactsFragment"
         android:label="fragment_my_contacts"
         tools:layout="@layout/fragment_my_contacts" >
         <action
@@ -36,11 +43,16 @@
     </fragment>
     <fragment
         android:id="@+id/contactProfileFragment"
-        android:name="sdumchykov.task3.ContactProfileFragment"
+        android:name="sdumchykov.androidApp.presentation.contactDetailView.ContactProfileFragment"
         android:label="ContactProfileFragment"
         tools:layout="@layout/fragment_contact_profile">
         <action
             android:id="@+id/action_contactProfileFragment_to_myContactsFragment"
-            app:destination="@id/myContactsFragment" />
+            app:destination="@id/myContactsFragment"
+            app:popUpTo="@id/myContactsFragment"
+            app:popUpToInclusive="true" />
+        <argument
+            android:name="contactId"
+            app:argType="integer" />
     </fragment>
 </navigation>
