--- a/app/src/main/res/navigation/sign_up_graph.xml
+++ b/app/src/main/res/navigation/sign_up_graph.xml
@@ -10,16 +10,16 @@
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up" >
         <action
-            android:id="@+id/action_signUpFragment_to_main_graph"
-            app:destination="@id/main_graph" />
-        <action
-            android:id="@+id/action_signUpFragment_to_myProfileFragment2"
-            app:destination="@id/myProfileFragment2" />
+            android:id="@+id/action_signUpFragment_to_mainActivity"
+            app:destination="@id/mainActivity" />
     </fragment>
-    <include app:graph="@navigation/main_graph" />
-    <fragment
-        android:id="@+id/myProfileFragment2"
-        android:name="sdumchykov.androidApp.presentation.myProfile.MyProfileFragment"
-        android:label="fragment_my_profile"
-        tools:layout="@layout/fragment_my_profile" />
+    <activity
+        android:id="@+id/mainActivity"
+        android:name="sdumchykov.androidApp.presentation.MainActivity"
+        android:label="activity_main"
+        tools:layout="@layout/activity_main" >
+        <argument
+            android:name="email"
+            app:argType="string" />
+    </activity>
 </navigation>
