--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,49 +3,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/myProfileFragment">
-    <fragment
-        android:id="@+id/myProfileFragment"
-        android:name="sdumchykov.androidApp.presentation.myProfile.MyProfileFragment"
-        android:label="MyProfileFragment"
-        tools:layout="@layout/fragment_my_profile">
-        <action
-            android:id="@+id/action_myProfileFragment_to_myContactsFragment"
-            app:destination="@id/myContactsFragment"
-            app:enterAnim="@android:anim/fade_in"
-            app:exitAnim="@android:anim/fade_out"
-            app:popEnterAnim="@android:anim/fade_in"
-            app:popExitAnim="@android:anim/fade_out" />
-        <argument
-            android:name="email"
-            app:argType="string" />
-    </fragment>
-    <fragment
-        android:id="@+id/myContactsFragment"
-        android:name="sdumchykov.androidApp.presentation.contacts.MyContactsFragment"
-        android:label="fragment_my_contacts"
-        tools:layout="@layout/fragment_my_contacts" >
-        <action
-            android:id="@+id/action_myContactsFragment_to_contactProfileFragment"
-            app:destination="@id/contactProfileFragment" />
-        <action
-            android:id="@+id/action_myContactsFragment_to_myProfileFragment"
-            app:destination="@id/myProfileFragment"
-            app:popUpTo="@id/myProfileFragment"
-            app:popUpToInclusive="true" />
-    </fragment>
+    app:startDestination="@id/screenSlidePagerActivity">
     <fragment
         android:id="@+id/contactProfileFragment"
         android:name="sdumchykov.androidApp.presentation.contactDetailView.ContactProfileFragment"
         android:label="ContactProfileFragment"
         tools:layout="@layout/fragment_contact_profile">
-        <action
-            android:id="@+id/action_contactProfileFragment_to_myContactsFragment"
-            app:destination="@id/myContactsFragment"
-            app:popUpTo="@id/myContactsFragment"
-            app:popUpToInclusive="true" />
         <argument
             android:name="contactId"
             app:argType="integer" />
+        <action
+            android:id="@+id/action_contactProfileFragment_to_screenSlidePagerActivity"
+            app:destination="@id/screenSlidePagerActivity" />
+    </fragment>
+    <fragment
+        android:id="@+id/screenSlidePagerActivity"
+        android:name="sdumchykov.androidApp.presentation.ScreenSlidePagerActivity"
+        android:label="ScreenSlidePagerActivity">
+        <action
+            android:id="@+id/action_screenSlidePagerActivity_to_contactProfileFragment"
+            app:destination="@id/contactProfileFragment" />
     </fragment>
 </navigation>
