--- a/app/src/main/res/layout/add_contacts_dialog.xml
+++ b/app/src/main/res/layout/add_contacts_dialog.xml
@@ -14,6 +14,7 @@
         android:hint="@string/dialog_contact_name"
         android:textColorHint="@color/silver"
         app:hintTextColor="@color/silver"
+        android:theme="@style/ThemeOverlay.App.TextInputLayout"
 
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,6 +22,8 @@
             android:id="@+id/editTextAddContactsDialogName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
+            android:background="@android:color/transparent"
 
             android:inputType="textPersonName"
             android:textColor="@color/alabaster" />
@@ -35,6 +38,7 @@
         android:hint="@string/dialog_contact_surname"
         android:textColorHint="@color/silver"
         app:hintTextColor="@color/silver"
+        android:theme="@style/ThemeOverlay.App.TextInputLayout"
 
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogName">
 
@@ -42,6 +46,8 @@
             android:id="@+id/editTextAddContactsDialogSurname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
+            android:background="@android:color/transparent"
 
             android:inputType="textPersonName"
             android:textColor="@color/alabaster" />
@@ -56,6 +62,8 @@
         android:hint="@string/dialog_contact_profession"
         android:textColorHint="@color/silver"
         app:hintTextColor="@color/silver"
+        android:theme="@style/ThemeOverlay.App.TextInputLayout"
+
 
         app:layout_constraintTop_toBottomOf="@id/textInputLayoutAddContactsDialogSurname">
 
@@ -63,6 +71,8 @@
             android:id="@+id/editTextAddContactsDialogProfession"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
+            android:background="@android:color/transparent"
 
             android:inputType="text"
             android:textColor="@color/alabaster" />
