--- a/app/src/main/res/layout/fragment_my_contacts.xml
+++ b/app/src/main/res/layout/fragment_my_contacts.xml
@@ -7,6 +7,15 @@
     android:background="@color/steel_gray"
     tools:context=".presentation.contacts.MyContactsFragment">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+
+        android:background="@color/white"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMyContacts014" />
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontalMyContacts003"
         android:layout_width="0dp"
@@ -94,11 +103,32 @@
 
         android:background="@color/white"
 
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/frameLayoutButtonsContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guidelineHorizontalMyContacts014"
 
         tools:listitem="@layout/contact_item" />
+
+    <FrameLayout
+        android:id="@+id/frameLayoutButtonsContainer"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginVertical="36dp"
+        android:layout_marginEnd="@dimen/dimension_16dp"
+
+        android:visibility="gone"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/buttonRemoveSelectedContacts"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/ic_multiple_delete"
+            android:contentDescription="@string/edit_profile"
+            android:visibility="gone" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
