SDA-4: Code enhancement and clearing.

--- a/app/src/main/res/layout-land/fragment_my_contacts.xml
+++ b/app/src/main/res/layout-land/fragment_my_contacts.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/steel_gray"
-    tools:context=".presentation.contacts.MyContactsFragment">
+    tools:context=".presentation.viewPager.contacts.MyContactsFragment">
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guidelineHorizontalMyContacts003"
