--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.myProfile.MyProfileFragment">
+    tools:context=".presentation.viewPager.myProfile.MyProfileFragment">
 
     <View
         android:id="@+id/viewMainTop"
