--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,27 +3,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph"
-    app:startDestination="@id/screenSlidePagerActivity">
+    app:startDestination="@id/viewPagerFragment">
     <fragment
         android:id="@+id/contactProfileFragment"
         android:name="sdumchykov.androidApp.presentation.contactDetailView.ContactProfileFragment"
         android:label="ContactProfileFragment"
         tools:layout="@layout/fragment_contact_profile">
-        <argument
-            android:name="contactId"
-            app:argType="integer" />
         <action
             android:id="@+id/action_contactProfileFragment_to_screenSlidePagerActivity"
-            app:destination="@id/screenSlidePagerActivity"
-            app:popUpTo="@id/screenSlidePagerActivity"
+            app:destination="@id/viewPagerFragment"
+            app:popUpTo="@id/viewPagerFragment"
             app:popUpToInclusive="true" />
+        <argument
+            android:name="userModel"
+            app:argType="sdumchykov.androidApp.domain.model.UserModel" />
     </fragment>
     <fragment
-        android:id="@+id/screenSlidePagerActivity"
-        android:name="sdumchykov.androidApp.presentation.ScreenSlidePagerActivity"
-        android:label="ScreenSlidePagerActivity">
+        android:id="@+id/viewPagerFragment"
+        android:name="sdumchykov.androidApp.presentation.viewPager.ViewPagerFragment"
+        android:label="ViewPagerFragment">
         <action
-            android:id="@+id/action_screenSlidePagerActivity_to_contactProfileFragment"
+            android:id="@+id/action_viewPagerFragment_to_contactProfileFragment"
             app:destination="@id/contactProfileFragment" />
     </fragment>
 </navigation>
