--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.EditProfileFragment">
+    tools:context=".presentation.editProfile.EditProfileFragment">
 
     <View
         android:id="@+id/viewEditProfilePrimary"
@@ -47,6 +47,13 @@
         app:layout_constraintGuide_percent="0.08" />
 
     <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalGuidelineEditProfile098"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.98" />
+
+    <androidx.constraintlayout.widget.Guideline
         android:id="@+id/horizontalGuidelineEditProfile03"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -59,6 +66,23 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.04" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/verticalGuidelineEditProfile096"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.96" />
+
+    <ProgressBar
+        android:id="@+id/progressBarEditProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageEditProfileArrowBack"
@@ -77,8 +101,9 @@
         android:fontFamily="@font/opensans_semi_bold"
         android:text="@string/editProfileEditProfile"
         android:textColor="@color/alabaster"
-        android:textSize="@dimen/text_24sp"
+        android:textSize="@dimen/text_18sp"
 
+        app:layout_constraintBottom_toTopOf="@id/horizontalGuidelineEditProfile008"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/horizontalGuidelineEditProfile003" />
@@ -109,5 +134,128 @@
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintStart_toEndOf="@id/imageViewEditProfilePicture"
         app:layout_constraintTop_toBottomOf="@id/horizontalGuidelineEditProfile008" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutEditProfileUsername"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/editProfileUsername"
+        app:expandedHintEnabled="false"
+        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEditProfileCareer"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEditProfile096"
+        app:layout_constraintStart_toStartOf="@id/verticalGuidelineEditProfile004"
+        app:layout_constraintTop_toBottomOf="@id/horizontalGuidelineEditProfile03">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextEditProfileUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutEditProfileCareer"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/editProfileCareer"
+        app:expandedHintEnabled="false"
+        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEditProfileEmail"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEditProfile096"
+        app:layout_constraintStart_toStartOf="@id/verticalGuidelineEditProfile004"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEditProfileUsername">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextEditProfileCareer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutEditProfileEmail"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/editProfileEmail"
+        app:expandedHintEnabled="false"
+        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEditProfilePhone"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEditProfile096"
+        app:layout_constraintStart_toStartOf="@id/verticalGuidelineEditProfile004"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEditProfileCareer">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextEditProfileEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutEditProfilePhone"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/editProfilePhone"
+        app:expandedHintEnabled="false"
+        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEditProfileAddress"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEditProfile096"
+        app:layout_constraintStart_toStartOf="@id/verticalGuidelineEditProfile004"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEditProfileEmail">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextEditProfilePhone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutEditProfileAddress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/editProfileAddress"
+        app:expandedHintEnabled="false"
+        app:layout_constraintBottom_toTopOf="@id/textInputLayoutEditProfileDateOfBirth"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEditProfile096"
+        app:layout_constraintStart_toStartOf="@id/verticalGuidelineEditProfile004"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEditProfilePhone">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextEditProfileAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/textInputLayoutEditProfileDateOfBirth"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/editProfileDOB"
+        app:expandedHintEnabled="false"
+        app:layout_constraintBottom_toTopOf="@id/buttonEditProfileSave"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEditProfile096"
+        app:layout_constraintStart_toStartOf="@id/verticalGuidelineEditProfile004"
+        app:layout_constraintTop_toBottomOf="@id/textInputLayoutEditProfileAddress">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/textInputEditTextEditProfileDateOfBirth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/transparent" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonEditProfileSave"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
+        android:background="@drawable/btn_orange"
+        android:text="@string/editProfileSave"
+        android:textAllCaps="true"
+        android:textAppearance="@style/viewMyContactsTextAppearance"
+
+        app:layout_constraintBottom_toTopOf="@id/horizontalGuidelineEditProfile098"
+        app:layout_constraintEnd_toEndOf="@id/verticalGuidelineEditProfile096"
+        app:layout_constraintStart_toStartOf="@id/verticalGuidelineEditProfile004"
+        tools:ignore="VisualLintButtonSize" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
