--- a/app/src/main/res/layout/fragment_my_contacts.xml
+++ b/app/src/main/res/layout/fragment_my_contacts.xml
@@ -73,7 +73,6 @@
         app:layout_constraintStart_toStartOf="@id/guidelineVerticalMyContacts004"
         app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMyContacts003" />
 
-
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imageViewMyContactsSearch"
         style="@style/widthHeightIsWrapContent"
@@ -82,6 +81,22 @@
 
         app:layout_constraintBottom_toBottomOf="@id/textViewMyContactsContacts"
         app:layout_constraintEnd_toEndOf="@id/guidelineVerticalMyContacts096"
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMyContacts003" />
+
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchViewMyContacts"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+
+        android:background="@drawable/search_view_background"
+        android:inputType="text"
+        android:visibility="gone"
+        app:iconifiedByDefault="true"
+
+
+        app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalMyContacts008"
+        app:layout_constraintEnd_toStartOf="@id/guidelineVerticalMyContacts096"
+        app:layout_constraintStart_toStartOf="@id/guidelineVerticalMyContacts004"
         app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMyContacts003" />
 
     <androidx.appcompat.widget.AppCompatTextView
@@ -108,6 +123,38 @@
         app:layout_constraintBottom_toBottomOf="@id/guidelineHorizontalMyContacts014"
         app:layout_constraintStart_toStartOf="@id/guidelineVerticalMyContacts004"
         app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMyContacts008" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textViewMyContactsTopText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="32dp"
+
+        android:fontFamily="@font/opensans_semi_bold"
+        android:text="@string/fragmentMyContactsRecyclerTopText"
+        android:textColor="@color/woodsmoke"
+        android:textSize="@dimen/text_24sp"
+        android:visibility="gone"
+
+        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalMyContacts096"
+        app:layout_constraintStart_toStartOf="@id/guidelineVerticalMyContacts004"
+        app:layout_constraintTop_toTopOf="@id/guidelineHorizontalMyContacts014" />
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/textViewMyContactsBottomText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dimension_8dp"
+
+        android:fontFamily="@font/opensans_semi_bold"
+        android:text="@string/fragmentMyContactsRecyclerBottomText"
+        android:textColor="@color/woodsmoke"
+        android:textSize="@dimen/text_12sp"
+        android:visibility="gone"
+
+        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalMyContacts096"
+        app:layout_constraintStart_toStartOf="@id/guidelineVerticalMyContacts004"
+        app:layout_constraintTop_toBottomOf="@id/textViewMyContactsTopText" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMyContactsContactList"
