--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,12 @@
         <item name="colorControlActivated">@color/silver</item>
         <item name="colorControlHighlight">@color/silver</item>
         <item name="tabStyle">@style/Widget.App.TabLayout</item>
+        <!--SearchView Text Color-->
+        <item name="android:editTextColor">@color/alabaster</item>
+    </style>
+
+    <style name="TextField" parent="Theme.AppCompat">
+
     </style>
 
     <style name="Widget.App.TabLayout" parent="Widget.MaterialComponents.TabLayout">
